# Toposhield-Genus5

./: Cargo.toml  Makefile  README.md
circuits/: holonomy_chain.circom  holonomy_path.circom  holonomy_path_enhanced.circom
doc/: Mathematical Model.md
scripts/: manual.md  visualize_path.py
src/: lib.rs  manifold.rs  prover.rs  witness.rs
tests/: integration_test.rs
