[package]
name = "toposhield"
version = "0.1.0"
edition = "2021"
authors = ["Mironov Aleksej <miro-aleksej@yandex.ru>"]
description = "TopoShield: Post-quantum signature scheme based on hyperbolic topology and zero-knowledge proofs"
license = "MIT"
repository = "https://github.com/your-username/toposhield"  # замените при публикации
keywords = ["zkp", "post-quantum", "topology", "halo2", "circom"]
categories = ["cryptography", "mathematics"]

[lib]
path = "src/lib.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
# Core cryptographic primitives
ff = "0.13"
group = "0.13"
rand = "0.8"

# Halo2 and curves
halo2-curves = { version = "0.5", features = ["bn256"] }
halo2-proofs = { version = "0.5", features = ["dev-graph", "loader_evm"] }

# Circom integration
halo2-circom = "0.5"

# Hashing
poseidon = { version = "0.5", features = ["halo2"] }

# Serialization (for witness export)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding (for Circom input formatting)
hex = "0.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "signing_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
